# codablecash

./: .cproject  .gitignore  .project  .travis.yml  AlinousStore.cpp  CMakeLists.txt  CMakeReport.cmake  CONTRIBUTING.md  LICENSE  README.md  SETUP_ECLIPSE.md  codablecash.kdev4
src_blockchain/: CMakeLists.txt  README.md
src_blockchain/bc/: BlockchainSoftwareVersion.cpp  BlockchainSoftwareVersion.h  CMakeLists.txt  CodablecashConfig.cpp  CodablecashConfig.h  CodablecashNodeInstance.cpp  CodablecashNodeInstance.h  CodablecashSystemParam.cpp  CodablecashSystemParam.h  DebugDefaultLogger.cpp  DebugDefaultLogger.h  DefaultInstanceMemberAllocator.cpp  DefaultInstanceMemberAllocator.h  ExceptionThrower.h  IInstanceMemberAllocator.cpp  IInstanceMemberAllocator.h  ISystemLogger.cpp  ISystemLogger.h  SoftwareVersion.cpp  SoftwareVersion.h  exceptions.cpp  exceptions.h
src_blockchain/bc_base/: Abstract32BytesId.cpp  Abstract32BytesId.h  AbstractAddress.cpp  AbstractAddress.h  AddressDescriptor.cpp  AddressDescriptor.h  BalanceAddress.cpp  BalanceAddress.h  BalanceUnit.cpp  BalanceUnit.h  Base58.cpp  Base58.h  Base64.cpp  Base64.h  BinaryUtils.cpp  BinaryUtils.h  CMakeLists.txt
src_blockchain/bc_base_conf_store/: AbstractConfigStoreElement.cpp  AbstractConfigStoreElement.h  BinaryValueConfigStoreValue.cpp  BinaryValueConfigStoreValue.h  CMakeLists.txt  LongValueConfigStoreValue.cpp  LongValueConfigStoreValue.h  ShortValueConfigStoreValue.cpp  ShortValueConfigStoreValue.h  StatusStore.cpp  StatusStore.h
src_blockchain/bc_base_trx_index/: BalanceUnitKey.cpp  BalanceUnitKey.h  BalanceUnitKeyFactory.cpp  BalanceUnitKeyFactory.h  CMakeLists.txt  TransactionData.cpp  TransactionData.h  TransactionDataFactory.cpp  TransactionDataFactory.h  TransactionIdData.cpp  TransactionIdData.h  TransactionIdDataFactory.cpp  TransactionIdDataFactory.h  TransactionIdKey.cpp  TransactionIdKey.h  TransactionIdKeyFactory.cpp  TransactionIdKeyFactory.h  TransactionIdsListData.cpp  TransactionIdsListData.h  TransactionIdsListDataFactory.cpp  TransactionIdsListDataFactory.h
src_blockchain/bc_base_utxo_index/: AddressDescriptorData.cpp  AddressDescriptorData.h  AddressDescriptorDataFactory.cpp  AddressDescriptorDataFactory.h  AddressDescriptorKey.cpp  AddressDescriptorKey.h  AddressDescriptorKeyFactory.cpp  AddressDescriptorKeyFactory.h  AddressDescriptorUtxoData.cpp  AddressDescriptorUtxoData.h  AddressDescriptorUtxoDataFactory.cpp  AddressDescriptorUtxoDataFactory.h  CMakeLists.txt  UtxoData.cpp  UtxoData.h  UtxoDataFactory.cpp  UtxoDataFactory.h  UtxoIdKey.cpp  UtxoIdKey.h  UtxoIdKeyFactory.cpp  UtxoIdKeyFactory.h
src_blockchain/bc_block/: Block.cpp  Block.h  BlockHeader.cpp  BlockHeader.h  BlockHeaderId.cpp  BlockHeaderId.h  BlockMerkleRoot.cpp  BlockMerkleRoot.h  BlockMerkleRootKey.cpp  BlockMerkleRootKey.h  BlockMerkleRootKeyFactory.cpp  BlockMerkleRootKeyFactory.h  BlockVersion.cpp  BlockVersion.h  CMakeLists.txt
src_blockchain/bc_block_body/: AbstractBlockRewordTransaction.cpp  AbstractBlockRewordTransaction.h  BlockBody.cpp  BlockBody.h  BlockRewordBase.cpp  BlockRewordBase.h  CMakeLists.txt  Coinbase.cpp  Coinbase.h  CoinbaseTransaction.cpp  CoinbaseTransaction.h  IOmittedBlockBodyFixer.cpp  IOmittedBlockBodyFixer.h  ITransactionVisitor.cpp  ITransactionVisitor.h  OmittedBlockBody.cpp  OmittedBlockBody.h  OmittedBlockBodyFixer.cpp  OmittedBlockBodyFixer.h  StakeBaseTransaction.cpp  StakeBaseTransaction.h  Stakebase.cpp  Stakebase.h
src_blockchain/bc_block_generator/: BlockGenerator.cpp  BlockGenerator.h  BlockRewardCalculator.cpp  BlockRewardCalculator.h  BlockRewardMiningBase.cpp  BlockRewardMiningBase.h  BlockRewardStakeBase.cpp  BlockRewardStakeBase.h  CMakeLists.txt  IBlockGenerationListner.cpp  IBlockGenerationListner.h  MiningConfig.cpp  MiningConfig.h
src_blockchain/bc_block_header_command/: AbstractBlockHeaderCommand.cpp  AbstractBlockHeaderCommand.h  CMakeLists.txt  NewShardZoneCommand.cpp  NewShardZoneCommand.h  RecognizedNewShardCommand.cpp  RecognizedNewShardCommand.h
src_blockchain/bc_block_validator/: BlockHeaderValidator.cpp  BlockHeaderValidator.h  BlockValidationException.cpp  BlockValidationException.h  BlockValidator.cpp  BlockValidator.h  CMakeLists.txt
src_blockchain/bc_block_vote/: CMakeLists.txt  VotePart.cpp  VotePart.h  VotedHeaderIdGroup.cpp  VotedHeaderIdGroup.h
src_blockchain/bc_blockstore/: BlockchainStoreException.cpp  BlockchainStoreException.h  CMakeLists.txt  CodablecashBlockchain.cpp  CodablecashBlockchain.h  IBlockchainEventListner.cpp  IBlockchainEventListner.h  InvalidZoneException.cpp  InvalidZoneException.h  ZoneStore.cpp  ZoneStore.h
src_blockchain/bc_blockstore_body/: BlockBodyStore.cpp  BlockBodyStore.h  BlockBodyStoreCache.cpp  BlockBodyStoreCache.h  BlockBodyStoreCacheElement.cpp  BlockBodyStoreCacheElement.h  BlockBodyStoreManager.cpp  BlockBodyStoreManager.h  BlockMerkleRootIndex.cpp  BlockMerkleRootIndex.h  CMakeLists.txt  FilePositionData.cpp  FilePositionData.h  FilePositionDataFactory.cpp  FilePositionDataFactory.h
src_blockchain/bc_blockstore_header/: BlockHeaderHeightIndex.cpp  BlockHeaderHeightIndex.h  BlockHeaderHeightIndexDataFactory.cpp  BlockHeaderHeightIndexDataFactory.h  BlockHeaderHeightIndexKey.cpp  BlockHeaderHeightIndexKey.h  BlockHeaderHeightIndexKeyFactory.cpp  BlockHeaderHeightIndexKeyFactory.h  BlockHeaderIdKey.cpp  BlockHeaderIdKey.h  BlockHeaderIdKeyFactory.cpp  BlockHeaderIdKeyFactory.h  BlockHeaderList.cpp  BlockHeaderList.h  BlockHeaderNotFoundException.cpp  BlockHeaderNotFoundException.h  BlockHeaderStore.cpp  BlockHeaderStore.h  BlockHeaderStoreCache.cpp  BlockHeaderStoreCache.h  BlockHeaderStoreCacheElement.cpp  BlockHeaderStoreCacheElement.h  CMakeLists.txt  (+4 more)
src_blockchain_p2p/: CMakeLists.txt
src_db/: CMakeLists.txt  README.md  db_exceptions.h
src_ext/: CMakeLists.txt  extmain.cpp
src_smartcontract/: CMakeLists.txt  README.md
src_smartcontract_db/: CMakeLists.txt
src_smartcontract_modular/: CMakeLists.txt
src_smartcontract_vm/: CMakeLists.txt  README.md
src_test/: CMakeLists.txt  testallmain.cpp
(+4330 files in other folders)
