
set(__dirsrc "")

# import source codes
add_subdirectory(bc)
add_subdirectory(bc_base)
add_subdirectory(bc_base_conf_store)
add_subdirectory(bc_base_trx_index)
add_subdirectory(bc_base_utxo_index)
add_subdirectory(bc_block)
add_subdirectory(bc_block_body)
add_subdirectory(bc_block_generator)
add_subdirectory(bc_block_validator)
add_subdirectory(bc_block_vote)
add_subdirectory(bc_blockstore)
add_subdirectory(bc_blockstore_body)
add_subdirectory(bc_blockstore_header)
add_subdirectory(bc_finalizer)
add_subdirectory(bc_finalizer_pool)
add_subdirectory(bc_finalizer_trx)
add_subdirectory(bc_memorypool)
add_subdirectory(bc_network)
add_subdirectory(bc_network_instance)
add_subdirectory(bc_network_instance_sync)
add_subdirectory(bc_network_instance_sync_repo)
add_subdirectory(bc_processor)
add_subdirectory(bc_processor_cmd)
add_subdirectory(bc_smartcontract)
add_subdirectory(bc_status_cache)
add_subdirectory(bc_status_cache_context)
add_subdirectory(bc_status_cache_context_finalizer)
add_subdirectory(bc_status_cache_data)
add_subdirectory(bc_status_cache_lockin)
add_subdirectory(bc_status_cache_vote)
add_subdirectory(bc_trx)
add_subdirectory(bc_trx_balance)
add_subdirectory(bc_trx_genesis)
add_subdirectory(bc_wallet)
add_subdirectory(bc_wallet_encoder)
add_subdirectory(bc_wallet_trx)
add_subdirectory(bc_wallet_trx_repo)
add_subdirectory(merkletree)
add_subdirectory(pow)
add_subdirectory(pow_hash)
add_subdirectory(procesor)
add_subdirectory(procesor_multi)

message(STATUS "src_blockchain : ${__dirsrc}")

set_parentv("${__dirsrc}" src_blockchain top_src_blockchain)
