
set(__dirsrc "")

# import source codes
add_subdirectory(engine/compiler)
add_subdirectory(engine/sc)
add_subdirectory(engine/sc_analyze)
add_subdirectory(engine/sc_analyze_functions)
add_subdirectory(engine/sc_analyze_sql)
add_subdirectory(engine/sc_analyze_stack)
add_subdirectory(engine/sc_analyze_variables)
add_subdirectory(lang/sc_declare)
add_subdirectory(lang/sc_declare_types)
add_subdirectory(lang/sc_expression)
add_subdirectory(lang/sc_expression_arithmetic)
add_subdirectory(lang/sc_expression_bit)
add_subdirectory(lang/sc_expression_json)
add_subdirectory(lang/sc_expression_literal)
add_subdirectory(lang/sc_expression_logical)
add_subdirectory(lang/sc_statement)
add_subdirectory(lang/sc_statement_ctrl)
add_subdirectory(lang/sc_statement_exception)
add_subdirectory(lang_sql/sql)
add_subdirectory(lang_sql/sql_ddl)
add_subdirectory(lang_sql/sql_ddl_alter)
add_subdirectory(lang_sql/sql_ddl_alter_modify)
add_subdirectory(lang_sql/sql_dml)
add_subdirectory(lang_sql/sql_dml_parts)
add_subdirectory(lang_sql/sql_expression)
add_subdirectory(lang_sql/sql_join_parts)

message(STATUS "src_smartcontract : ${__dirsrc}")

set_parentv("${__dirsrc}" src_smartcontract top_src_smartcontract)
