
set(__dirsrc "")

# import source codes
add_subdirectory(engine)
add_subdirectory(engine_lock)
add_subdirectory(scan_select/scan)
add_subdirectory(scan_select/scan_columns)
add_subdirectory(scan_select/scan_columns/scan_columns_arithmetic)
add_subdirectory(scan_select/scan_columns/scan_columns_exp)
add_subdirectory(scan_select/scan_columns/scan_columns_logical)
add_subdirectory(scan_select/scan_columns/scan_columns_params)
add_subdirectory(scan_select/scan_condition/base)
add_subdirectory(scan_select/scan_condition/arithmetic)
add_subdirectory(scan_select/scan_condition/exp)
add_subdirectory(scan_select/scan_condition/exp_like)
add_subdirectory(scan_select/scan_condition/exp_escape)
add_subdirectory(scan_select/scan_condition/func)
add_subdirectory(scan_select/scan_condition/func_aggregate)
add_subdirectory(scan_select/scan_condition/func_string)
add_subdirectory(scan_select/scan_condition/logical)
add_subdirectory(scan_select/scan_condition/params)
add_subdirectory(scan_select/scan_planner/base)
add_subdirectory(scan_select/scan_planner/analyze)
add_subdirectory(scan_select/scan_planner/scanner/ctx)
add_subdirectory(scan_select/scan_planner/scanner/factory)
add_subdirectory(scan_select/scan_planner/scanner/index)
add_subdirectory(scan_select/scan_planner/scanner/index_resolv)
add_subdirectory(scan_select/scan_planner/scanner/join)
add_subdirectory(scan_select/scan_table)
add_subdirectory(schema_table/schema)
add_subdirectory(schema_table/schema_alter_ctx)
add_subdirectory(schema_table/table)
add_subdirectory(schema_table/record/table_record)
add_subdirectory(schema_table/record/table_record_key)
add_subdirectory(schema_table/record/table_record_local)
add_subdirectory(schema_table/record/table_record_value)
add_subdirectory(schema_table/table_store)
add_subdirectory(snapshot)
add_subdirectory(snapshot_checker)
add_subdirectory(trx/scan/transaction_scan_result)
add_subdirectory(trx/scan/transaction_scanner)
add_subdirectory(trx/scan/transaction_scanner_join)
add_subdirectory(trx/scan/transaction_scanner_join_right)
add_subdirectory(trx/scan/transaction_update_cache)
add_subdirectory(trx/scan/transaction_update_cache_index)
add_subdirectory(trx/session/base)
add_subdirectory(trx/session/ddl)
add_subdirectory(trx/session/ddl_alter)
add_subdirectory(trx/session/dml)
add_subdirectory(trx/session/index)
add_subdirectory(trx/session/record)
add_subdirectory(trx/session/repo)
add_subdirectory(trx/transaction)
add_subdirectory(trx/transaction_cache)
add_subdirectory(trx/transaction_cache_array)
add_subdirectory(trx/transaction_exception)
add_subdirectory(trx/transaction_log)
add_subdirectory(trx/transaction_log_alter)
add_subdirectory(trx/transaction_log_alter_modify)

message(STATUS "src_smartcontract_db : ${__dirsrc}")

set_parentv("${__dirsrc}" src_smartcontract_db top_src_smartcontract_db)
