
set(__dirsrc "")


add_subdirectory(blockchain/base)
add_subdirectory(blockchain/block)
add_subdirectory(blockchain/finalizer)
add_subdirectory(blockchain/finalizer/dummy)
add_subdirectory(blockchain/fw)
add_subdirectory(blockchain/instance)
add_subdirectory(blockchain/memorypool)
add_subdirectory(blockchain/pow)
add_subdirectory(blockchain/testnet)
add_subdirectory(blockchain/trx)
add_subdirectory(blockchain/trx_balance)
add_subdirectory(blockchain/utils)
add_subdirectory(blockchain/utils_testnet)
add_subdirectory(blockchain/wallet)
add_subdirectory(blockchain/wallet/setup)
add_subdirectory(blockchain/wallet_util)
add_subdirectory(crypto)
add_subdirectory(db/db_base)
add_subdirectory(db/db_base_io)
add_subdirectory(db/db_base_timestamp)
add_subdirectory(db/db_base_io_stream)
add_subdirectory(db/db_base_thread)
add_subdirectory(db/db_btree)
add_subdirectory(db/db_charsets)
add_subdirectory(db/db_filestore)
add_subdirectory(db/db_numeric)
add_subdirectory(db/db_random_access_file)
add_subdirectory(p2p/instance)
add_subdirectory(p2p/netinfo)
add_subdirectory(p2p/p2pserver)
add_subdirectory(p2p/parts)
add_subdirectory(p2p/p2pserver/dummy)
add_subdirectory(p2p/socket)
add_subdirectory(smartcontract)
add_subdirectory(smartcontract_db/cache)
add_subdirectory(smartcontract_db/engine)
add_subdirectory(smartcontract_db/select/ctx)
add_subdirectory(smartcontract_db/select/index_select)
add_subdirectory(smartcontract_db/select/placeholder)
add_subdirectory(smartcontract_db/select/scan_select_scan_columns)
add_subdirectory(smartcontract_db/select/select_stmt)
add_subdirectory(smartcontract_db/select/table_analyze)
add_subdirectory(smartcontract_db/select/table_group_by)
add_subdirectory(smartcontract_db/select/select_condition)
add_subdirectory(smartcontract_db/select/table_join)
add_subdirectory(smartcontract_db/select/table_scan)
add_subdirectory(smartcontract_db/table)
add_subdirectory(smartcontract_db/ddl/table_alter)
add_subdirectory(smartcontract_db/ddl/table_alter_column)
add_subdirectory(smartcontract_db/ddl/table_alter_index)
add_subdirectory(smartcontract_db/ddl/table_alter_modify)
add_subdirectory(smartcontract_db/ddl/table_alter_primary)
add_subdirectory(smartcontract_db/ddl/table_alter_rename)
add_subdirectory(smartcontract_db/ddl/table_ddl)
add_subdirectory(smartcontract_db/dml/delete)
add_subdirectory(smartcontract_db/dml/insert)
add_subdirectory(smartcontract_db/dml/update)
add_subdirectory(smartcontract_db/toolkit)
add_subdirectory(smartcontract_db/toolkit_alter)
add_subdirectory(smartcontract_db/toolkit_groupby)
add_subdirectory(smartcontract_db/toolkit_index)
add_subdirectory(smartcontract_db/toolkit_join)
add_subdirectory(smartcontract_db/variable)
add_subdirectory(smartcontract_modular/instance)
add_subdirectory(smartcontract_modular/project)
add_subdirectory(smartcontract_vm)
add_subdirectory(smartcontract_vm/access_inst)
add_subdirectory(smartcontract_vm/base)
add_subdirectory(smartcontract_vm/exp)
add_subdirectory(smartcontract_vm/exp_arithmetic)
add_subdirectory(smartcontract_vm/exp_bit)
add_subdirectory(smartcontract_vm/exp_lit)
add_subdirectory(smartcontract_vm/exp_logical)
add_subdirectory(smartcontract_vm/gc)
add_subdirectory(smartcontract_vm/inheritance)
add_subdirectory(smartcontract_vm/instance)
add_subdirectory(smartcontract_vm/memory)
add_subdirectory(smartcontract_vm/method_invoke)
add_subdirectory(smartcontract_vm/reserved_classes)
add_subdirectory(smartcontract_vm/stmt_ctrl)
add_subdirectory(smartcontract_vm/stmt_exception)
add_subdirectory(smartcontract_vm/variables)
add_subdirectory(supply)
add_subdirectory(test_utils)

message("-- src_test : ${__dirsrc}")

set_parentv("${__dirsrc}" src_test top_testsrc)



